--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -1,5 +1,5 @@
 <section style="display: flex;">
-    <mat-card style="flex: 30%;">
+    <mat-card class="info_detail" style="">
         <div style="text-align: center; display: flex; justify-content: center; padding: 1rem;">
             <div class="img_avt">
                 <h1>{{characterAvt}}</h1>
@@ -81,7 +81,7 @@
                         </tr>
                         <mat-divider></mat-divider>
                         <tr>
-                            <td style="width: 60%;">
+                            <td style="width: 40%;">
                                 <h3>{{item.orders.nameTicket}}</h3>
                                 <mat-card-title-sub>{{item.orders.itemService[0].name}}</mat-card-title-sub>
                             </td>
