--- a/src/app/pages/pay/pay.component.css
+++ b/src/app/pages/pay/pay.component.css
@@ -25,8 +25,10 @@ li {
   display: flex;
 }
 .ticket {
-  width: 50%;
+  /* width: 50%; */
   margin: 1rem;
+  border-radius: 30px;
+  background-color: aliceblue;
 }
 .mat-form-field {
   margin: 0.5rem;
