--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -27,8 +27,8 @@
                 <td>{{infoCustomer.address}}</td>
             </tr>
             <tr>
-                <td>Đơn đã đặt: </td>
-                <td>{{ArrayOrderTotal.length || 0}}</td>
+                <td>Đơn đã thanh toán: </td>
+                <td>{{ArrayOrderTotal[0].arrOrders.length || 0}}</td>
             </tr>
             <tr>
                 <td>Đơn đã hủy: </td>
