--- a/src/app/tickets/comment/comment.component.css
+++ b/src/app/tickets/comment/comment.component.css
@@ -1,13 +1,20 @@
 .img_avt {
+    position: relative;
     border: 5px solid pink;
     border-radius: 50%;
     width: 40px;
     height: 40px;
     background-color: plum;
   }
-  .img_avt > h1 {
+  .img_avt > span {
     text-align: center;
     position: absolute;
-    top: 0;
-    right: 40%;
+    top: 14%;
+    right: 33%;
+    font-weight: 900;
+    font-size: 22px;
+  }
+  .my-comment {
+    display: flex;
+    justify-content: center;
   }
