--- a/src/app/tickets/ticket-detail/ticket-detail.component.html
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.html
@@ -1,172 +1,174 @@
-<div style="display: flex;">
-  <div *ngIf="ticket" class="detail-ticket" style = "width:80%; margin: 0 auto;">
-    <mat-card style="border-radius: 30px;">
-      <!-- image slide -->
-      <div style="width: 100%; height: auto; text-align:center; margin:0; padding:0; border-radius: 20px;">
-        <ng-image-slider #nav
-          [images]="imageObject"
-          [infinite]="false"
-          [autoSlide]="imageObject.length"
-          [imageSize]="{width: '100%', height: 450}"
-          slideImage="1"></ng-image-slider>
-      </div>
-  
-      <!-- title ticket -->
-      <div class="title-ticket">
-        <h1>{{ticket.title || ''}}</h1>
-        <h3>{{ticket.city}}</h3>
-        <div class="list-category-item">
-          <span><img src="../../../assets/icon/location.svg" style="width: 30px; height: 30px;"></span>
-          <span class="list-category-item-name">{{ticket.category + " > " + ticket.categoryService}}</span>
+
+    <div *ngIf="ticket" class="detail-ticket" style = "width:80%; margin: 0 auto;">
+      <mat-card style="border-radius: 30px;">
+        <!-- image slide -->
+        <div style="width: 100%; height: auto; text-align:center; margin:0; padding:0; border-radius: 20px;">
+          <ng-image-slider #nav
+            [images]="imageObject"
+            [infinite]="false"
+            [autoSlide]="imageObject.length"
+            [imageSize]="{width: '100%', height: 450}"
+            slideImage="1"></ng-image-slider>
         </div>
-      </div>
-  
-      <!-- mat-chip -->
-      <div style="display: flex; flex-wrap: wrap; padding: 0.5rem 0; justify-content: center;">
-        <mat-chip class="icon_condition">
-          <img src = "../../../assets/icon/dollar.svg" width="20px" height="20px">
-          <span>Không hoàn huỷ/Hoàn huỷ miễn phí trong 24h</span>
-        </mat-chip>
-        <mat-chip class="icon_condition">
-          <img src = "../../../assets/icon/day.svg" width="20px" height="20px">
-          <span>Vé theo ngày cố định</span>
-        </mat-chip>
-        <mat-chip class="icon_condition">
-          <img src = "../../../assets/icon/printer.svg" width="20px" height="20px">
-          <span>Xuất trình vé điện tử hoặc in voucher</span>
-        </mat-chip>
-        <mat-chip class="icon_condition">
-          <img src = "../../../assets/icon/coupon.svg" width="20px" height="20px">
-          <span>Vào cổng bằng voucher/ Đổi vé cứng</span>
-        </mat-chip>
-        <mat-chip class="icon_condition">
-          <img src = "../../../assets/icon/car.svg" width="20px" height="20px">
-          <span>Đón tại điểm hẹn</span>
-        </mat-chip>
-      </div>
-  
-      <!-- content -->
-      <div class="content_ticket">
-        <p>{{ticket.content}}</p>
-      </div>
-  
-      <!-- services -->
-      <div style="display: flex;">
-        <div class="services-item">
-          <h3>Các gói dịch vụ</h3>
-          <p>Vui lòng chọn các gói dịch vụ</p>
-  
-          <div class="service_item">
-            <button
-              class="button_select"
-              mat-stroked-button
-              *ngFor="let item of ticket.services; index as i"
-              [ngClass]="checkColorService[i] ? 'button_select_color' : 'service_item'"
-              (click) = "showInfoService(i)"
-              style="margin: 5px;">
-               {{item.name}} </button>
+    
+        <!-- title ticket -->
+        <div class="title-ticket">
+          <h1>{{ticket.title || ''}}</h1>
+          <h3>{{ticket.city}}</h3>
+          <div class="list-category-item">
+            <span><img src="../../../assets/icon/location.svg" style="width: 30px; height: 30px;"></span>
+            <span class="list-category-item-name">{{ticket.category + " > " + ticket.categoryService}}</span>
           </div>
-  
-          <div>
-            <form [formGroup]="form">
-              <h3 style="padding-top: 2rem;">Số lượng</h3>
-              <mat-card *ngFor="let item of listItemService; index as i" class="item-select">
-                <tr>
-                  <td style="width: 50%;">{{item.itemServiceName}}</td>
-                  <td style="width: 10%; padding-right: 0.5rem;font-weight: bolder;">
-                    {{formatPrice(item.itemServicePrice)}}đ</td>
-                  <td>
-                    <button
-                    mat-raised-button
-                    (click)="item.quantity=item.quantity+1"><mat-icon>add</mat-icon></button>
-                  </td>
-                  <td>
-                      <input
-                        style="text-align: center;
-                        width: 40px;
-                        font-weight: bolder;"
-                        formControlName = "quantity"
-                        matInput
-                        #incrementInput
-                        type="number"
-                        min=0
-                        [value]="item.quantity"
-                        placeholder="0">
-                  </td>
-                  <td>
-                    <button
-                    *ngIf="item.quantity > 0"
-                      mat-raised-button
-                      (click)="item.quantity=item.quantity-1"><mat-icon>remove</mat-icon>
-                    </button>
-                  </td>
-                </tr>
+        </div>
+    
+        <!-- mat-chip -->
+        <div style="display: flex; flex-wrap: wrap; padding: 0.5rem 0; justify-content: center;">
+          <mat-chip class="icon_condition">
+            <img src = "../../../assets/icon/dollar.svg" width="20px" height="20px">
+            <span>Không hoàn huỷ/Hoàn huỷ miễn phí trong 24h</span>
+          </mat-chip>
+          <mat-chip class="icon_condition">
+            <img src = "../../../assets/icon/day.svg" width="20px" height="20px">
+            <span>Vé theo ngày cố định</span>
+          </mat-chip>
+          <mat-chip class="icon_condition">
+            <img src = "../../../assets/icon/printer.svg" width="20px" height="20px">
+            <span>Xuất trình vé điện tử hoặc in voucher</span>
+          </mat-chip>
+          <mat-chip class="icon_condition">
+            <img src = "../../../assets/icon/coupon.svg" width="20px" height="20px">
+            <span>Vào cổng bằng voucher/ Đổi vé cứng</span>
+          </mat-chip>
+          <mat-chip class="icon_condition">
+            <img src = "../../../assets/icon/car.svg" width="20px" height="20px">
+            <span>Đón tại điểm hẹn</span>
+          </mat-chip>
+        </div>
+    
+        <!-- content -->
+        <div class="content_ticket">
+          <p>{{ticket.content}}</p>
+        </div>
+        
+        <mat-tab-group mat-align-tabs="center">
+
+          <mat-tab label="DỊCH VỤ">
+            <div style="display: flex;">
+              <div class="services-item">
+                <h3>Các gói dịch vụ</h3>
+                <p>Vui lòng chọn các gói dịch vụ</p>
+        
+                <div class="service_item">
+                  <button
+                    class="button_select"
+                    mat-stroked-button
+                    *ngFor="let item of ticket.services; index as i"
+                    [ngClass]="checkColorService[i] ? 'button_select_color' : 'service_item'"
+                    (click) = "showInfoService(i)"
+                    style="margin: 5px;">
+                     {{item.name}} </button>
+                </div>
+        
+                <div>
+                  <form [formGroup]="form">
+                    <h3 style="padding-top: 2rem;">Số lượng</h3>
+                    <mat-card *ngFor="let item of listItemService; index as i" class="item-select">
+                      <tr>
+                        <td style="width: 50%;">{{item.itemServiceName}}</td>
+                        <td style="width: 10%; padding-right: 0.5rem;font-weight: bolder;">
+                          {{formatPrice(item.itemServicePrice)}}đ</td>
+                        <td>
+                          <button
+                          mat-raised-button
+                          (click)="item.quantity=item.quantity+1"><mat-icon>add</mat-icon></button>
+                        </td>
+                        <td>
+                            <input
+                              style="text-align: center;
+                              width: 40px;
+                              font-weight: bolder;"
+                              formControlName = "quantity"
+                              matInput
+                              #incrementInput
+                              type="number"
+                              min=0
+                              [value]="item.quantity"
+                              placeholder="0">
+                        </td>
+                        <td>
+                          <button
+                          *ngIf="item.quantity > 0"
+                            mat-raised-button
+                            (click)="item.quantity=item.quantity-1"><mat-icon>remove</mat-icon>
+                          </button>
+                        </td>
+                      </tr>
+                    </mat-card>
+                    <div class="selectDate">
+                      <h3 style="padding-top: 2rem;">Lựa chọn khoảng thời gian sử dụng vé:</h3>
+        
+                      <mat-form-field appearance="outline">
+                        <mat-label>Nhập ngày</mat-label>
+                        <mat-date-range-input [rangePicker]="picker">
+                          <input matStartDate placeholder="Start date" formControlName = "dateStart">
+                          <input matEndDate placeholder="End date" formControlName = "dateEnd" (dateChange) = "getDate()">
+                        </mat-date-range-input>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-date-range-picker #picker></mat-date-range-picker>
+                      </mat-form-field>
+                    </div>
+        
+                    <div class="btn-action">
+                      <button class="btn-add-cart" mat-stroked-button color="primary" (click) = "AddCart()">Thêm vào giỏ hàng</button>
+                      <!-- <button mat-raised-button color="warn" style="margin-left: 1rem;">Đặt ngay</button> -->
+                    </div>
+                  </form>
+        
+                </div>
+              </div>
+              <mat-card class="description">
+                <div class="Info-service">
+                  <h3>Thông tin sản phẩm</h3>
+                  <div>
+                    <h4>Bao gồm:</h4>
+                    <ul>
+                      <li *ngFor="let item of ticket.services[index].included">{{item}}</li>
+                    </ul>
+                  </div>
+                  <div>
+                    <h4>Không bao gồm:</h4>
+                    <ul>
+                      <li *ngFor="let item of ticket.services[index].notIncluded">{{item}}</li>
+                    </ul>
+                  </div>
+                  <div>
+                    <h4>Ngày hoạt động:</h4>
+                    <ul>
+                      <li>{{ticket.services[index].dayActive}}</li>
+                    </ul>
+                  </div>
+                  <div>
+                    <h4>Giờ mở cửa:</h4>
+                    <ul>
+                      <li>{{ticket.services[index].timeStart + ' AM - ' + ticket.services[index].timeStop + ' PM'}}</li>
+                    </ul>
+                  </div>
+                  <div>
+                    <h4>Địa chỉ:</h4>
+                    <ul>
+                      <li>{{ticket.address}}</li>
+                    </ul>
+                  </div>
+                </div>
               </mat-card>
-              <div class="selectDate">
-                <h3 style="padding-top: 2rem;">Lựa chọn khoảng thời gian sử dụng vé:</h3>
-  
-                <mat-form-field appearance="outline">
-                  <mat-label>Nhập ngày</mat-label>
-                  <mat-date-range-input [rangePicker]="picker">
-                    <input matStartDate placeholder="Start date" formControlName = "dateStart">
-                    <input matEndDate placeholder="End date" formControlName = "dateEnd" (dateChange) = "getDate()">
-                  </mat-date-range-input>
-                  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                  <mat-date-range-picker #picker></mat-date-range-picker>
-                </mat-form-field>
-              </div>
-  
-              <div class="btn-action">
-                <button class="btn-add-cart" mat-stroked-button color="primary" (click) = "AddCart()">Thêm vào giỏ hàng</button>
-                <!-- <button mat-raised-button color="warn" style="margin-left: 1rem;">Đặt ngay</button> -->
-              </div>
-            </form>
-  
-          </div>
-        </div>
-        <mat-card class="description">
-          <div class="Info-service">
-            <h3>Thông tin sản phẩm</h3>
-            <div>
-              <h4>Bao gồm:</h4>
-              <ul>
-                <li *ngFor="let item of ticket.services[index].included">{{item}}</li>
-              </ul>
             </div>
-            <div>
-              <h4>Không bao gồm:</h4>
-              <ul>
-                <li *ngFor="let item of ticket.services[index].notIncluded">{{item}}</li>
-              </ul>
-            </div>
-            <div>
-              <h4>Ngày hoạt động:</h4>
-              <ul>
-                <li>{{ticket.services[index].dayActive}}</li>
-              </ul>
-            </div>
-            <div>
-              <h4>Giờ mở cửa:</h4>
-              <ul>
-                <li>{{ticket.services[index].timeStart + ' AM - ' + ticket.services[index].timeStop + ' PM'}}</li>
-              </ul>
-            </div>
-            <div>
-              <h4>Địa chỉ:</h4>
-              <ul>
-                <li>{{ticket.address}}</li>
-              </ul>
-            </div>
-          </div>
-        </mat-card>
-      </div>
-    </mat-card>
-  </div>
-  
-  <div >
-      <mat-card>
-        <app-comment></app-comment>
+          </mat-tab>
+
+          <mat-tab label="BÌNH LUẬN">
+            <mat-card>
+              <app-comment></app-comment>
+            </mat-card>
+          </mat-tab>
+        </mat-tab-group>
       </mat-card>
-  </div>
-  
-</div>
+    </div>
