--- a/src/app/tickets/ticket-detail/ticket-detail.component.html
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.html
@@ -166,7 +166,7 @@
 
           <mat-tab label="BÌNH LUẬN">
             <mat-card>
-              <app-comment></app-comment>
+              <app-comment [ticket]="ticket"></app-comment>
             </mat-card>
           </mat-tab>
         </mat-tab-group>
