--- a/src/app/tickets/comment/comment.component.css
+++ b/src/app/tickets/comment/comment.component.css
@@ -16,5 +16,8 @@
   }
   .my-comment {
     display: flex;
-    justify-content: center;
+    padding: 1rem;
+  }
+  .like-item:hover {
+    transform: scale(1);
   }
