fix like commemt

--- a/src/app/tickets/comment/comment.component.html
+++ b/src/app/tickets/comment/comment.component.html
@@ -115,7 +115,10 @@
                         #inputUploadImage
                         (change)="onFileChange($event)"/>
                     <div style="padding-left: 1rem;  color:gray; fill:gray; display: flex;">
-                        <div style="font-size: 13px;">Thêm hình ảnh </div>
+                        <div 
+                            style="font-size: 13px; 
+                                border: 1px solid #f2f2f2; 
+                                border-radius: 10px; padding: 0.5rem 1rem;">Thêm hình ảnh </div>
                         <div>
                             <img width="30px" height="30px"
                             title="Tải ảnh lên từ máy tính"
